// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert error type borderless renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border: none;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-error c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="close-circle"
      fill="currentColor"
      fillRule="evenodd"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert error type closable renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-error c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="close-circle"
      fill="currentColor"
      fillRule="evenodd"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert error type renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-error c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="close-circle"
    className="anticon anticon-close-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="close-circle"
      fill="currentColor"
      fillRule="evenodd"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert info type borderless renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border: none;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert info type closable renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert info type renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert loading type borderless renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c3.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c0.c0.c0 .rovna-ui-alert-icon {
  color: #686E78FF;
}

.c0.c0.c0 {
  border: none;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    className="c1 rovna-ui-icon-root anticon rovna-ui-alert-icon"
    data-testid="rovna-ui-sync-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12 5C8.13401 5 5 8.13401 5 12C5 12.5523 4.55228 13 4 13C3.44772 13 3 12.5523 3 12C3 7.02944 7.02944 3 12 3C14.3057 3 16.4083 3.8673 18 5.29188V4C18 3.44772 18.4477 3 19 3C19.5523 3 20 3.44772 20 4V8C20 8.55228 19.5523 9 19 9H18.9489C18.9367 9.00022 18.9246 9.00022 18.9125 9H15C14.4477 9 14 8.55228 14 8C14 7.44772 14.4477 7 15 7H16.8992C15.636 5.76201 13.9066 5 12 5ZM20 11C20.5523 11 21 11.4477 21 12C21 16.9706 16.9706 21 12 21C9.69428 21 7.59169 20.1327 6 18.7081L6 20C6 20.5523 5.55228 21 5 21C4.44772 21 4 20.5523 4 20L4 16.001C4 16.0007 4 16.0003 4 16C4 15.4477 4.44772 15 5 15H5.05111C5.06327 14.9998 5.07541 14.9998 5.08754 15H9C9.55228 15 10 15.4477 10 16C10 16.5523 9.55228 17 9 17H7.10082C8.36405 18.238 10.0934 19 12 19C15.866 19 19 15.866 19 12C19 11.4477 19.4477 11 20 11Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c2 rovna-ui-icon-root anticon c3"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert loading type closable renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c3.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c0.c0.c0 .rovna-ui-alert-icon {
  color: #686E78FF;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    className="c1 rovna-ui-icon-root anticon rovna-ui-alert-icon"
    data-testid="rovna-ui-sync-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12 5C8.13401 5 5 8.13401 5 12C5 12.5523 4.55228 13 4 13C3.44772 13 3 12.5523 3 12C3 7.02944 7.02944 3 12 3C14.3057 3 16.4083 3.8673 18 5.29188V4C18 3.44772 18.4477 3 19 3C19.5523 3 20 3.44772 20 4V8C20 8.55228 19.5523 9 19 9H18.9489C18.9367 9.00022 18.9246 9.00022 18.9125 9H15C14.4477 9 14 8.55228 14 8C14 7.44772 14.4477 7 15 7H16.8992C15.636 5.76201 13.9066 5 12 5ZM20 11C20.5523 11 21 11.4477 21 12C21 16.9706 16.9706 21 12 21C9.69428 21 7.59169 20.1327 6 18.7081L6 20C6 20.5523 5.55228 21 5 21C4.44772 21 4 20.5523 4 20L4 16.001C4 16.0007 4 16.0003 4 16C4 15.4477 4.44772 15 5 15H5.05111C5.06327 14.9998 5.07541 14.9998 5.08754 15H9C9.55228 15 10 15.4477 10 16C10 16.5523 9.55228 17 9 17H7.10082C8.36405 18.238 10.0934 19 12 19C15.866 19 19 15.866 19 12C19 11.4477 19.4477 11 20 11Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c2 rovna-ui-icon-root anticon c3"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert loading type renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c3.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c0.c0.c0 .rovna-ui-alert-icon {
  color: #686E78FF;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    className="c1 rovna-ui-icon-root anticon rovna-ui-alert-icon"
    data-testid="rovna-ui-sync-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12 5C8.13401 5 5 8.13401 5 12C5 12.5523 4.55228 13 4 13C3.44772 13 3 12.5523 3 12C3 7.02944 7.02944 3 12 3C14.3057 3 16.4083 3.8673 18 5.29188V4C18 3.44772 18.4477 3 19 3C19.5523 3 20 3.44772 20 4V8C20 8.55228 19.5523 9 19 9H18.9489C18.9367 9.00022 18.9246 9.00022 18.9125 9H15C14.4477 9 14 8.55228 14 8C14 7.44772 14.4477 7 15 7H16.8992C15.636 5.76201 13.9066 5 12 5ZM20 11C20.5523 11 21 11.4477 21 12C21 16.9706 16.9706 21 12 21C9.69428 21 7.59169 20.1327 6 18.7081L6 20C6 20.5523 5.55228 21 5 21C4.44772 21 4 20.5523 4 20L4 16.001C4 16.0007 4 16.0003 4 16C4 15.4477 4.44772 15 5 15H5.05111C5.06327 14.9998 5.07541 14.9998 5.08754 15H9C9.55228 15 10 15.4477 10 16C10 16.5523 9.55228 17 9 17H7.10082C8.36405 18.238 10.0934 19 12 19C15.866 19 19 15.866 19 12C19 11.4477 19.4477 11 20 11Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c2 rovna-ui-icon-root anticon c3"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert neutral type borderless renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c0.c0.c0 .rovna-ui-alert-icon {
  color: #686E78FF;
}

.c0.c0.c0 {
  border: none;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert neutral type closable renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c0.c0.c0 .rovna-ui-alert-icon {
  color: #686E78FF;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert neutral type renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border-color: #D2D3D7FF;
  background-color: #F4F4F5FF;
}

.c0.c0.c0 .rovna-ui-alert-icon {
  color: #686E78FF;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-info c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="info-circle"
    className="anticon anticon-info-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert success type borderless renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border: none;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-success c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="check-circle"
    className="anticon anticon-check-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert success type closable renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-success c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="check-circle"
    className="anticon anticon-check-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert success type renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-success c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="check-circle"
    className="anticon anticon-check-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert warning type borderless renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.c0.c0 {
  border: none;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-warning c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert warning type closable renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-warning c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert warning type renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-arrow::before {
  -webkit-clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
  clip-path: polygon( 1.6568542494923806px 100%, 50% 1.6568542494923806px, 14.34314575050762px 100%, 1.6568542494923806px 100% );
}

.c2.rovna-ui-tooltip .rovna-ui-tooltip-inner {
  padding: 8px;
}

.c0.rovna-ui-alert {
  padding: 16px 24px;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-message {
  font-weight: 600;
}

.c0.rovna-ui-alert-with-description .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0 .rovna-ui-alert-icon {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  font-size: 20px;
}

<div
  className="rovna-ui-alert rovna-ui-alert-warning c0 css-dev-only-do-not-override-u64svk"
  data-show={true}
  data-testid="rovna-ui-alert"
  role="alert"
  style={{}}
>
  <span
    aria-label="exclamation-circle"
    className="anticon anticon-exclamation-circle rovna-ui-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="exclamation-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
      />
    </svg>
  </span>
  <div
    className="rovna-ui-alert-content"
  />
  <button
    className="rovna-ui-alert-close-icon"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-close-icon"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 7.70711C5.90237 7.31658 5.90237 6.68342 6.29289 6.29289C6.68342 5.90237 7.31658 5.90237 7.70711 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0976 6.68342 18.0976 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0976 16.6834 18.0976 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70711 17.7071C7.31658 18.0976 6.68342 18.0976 6.29289 17.7071C5.90237 17.3166 5.90237 16.6834 6.29289 16.2929L10.5858 12L6.29289 7.70711Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;
